# knuth-plass-wrap

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  eslint.config.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/harfrust-lite/: Cargo.toml  README.md
crates/harfrust-lite/src/hb/: mod.rs  ot_shaper.rs
crates/hypher-dynamic/: Cargo.toml
crates/hypher-dynamic/src/: lib.rs
scripts/: bench.ts  debug-lines.ts  debug-screenshots.ts  download-fonts.sh  generate-preset-pngs.ts  publish-npm-release.mjs  release-latest.mjs  screenshot-matrix.ts  screenshot.ts  setup-deploy.sh  test-all-presets.ts  test-ssr.ts
scripts/tex/: measure-words-weighted.tex  measure-words.tex  preset-template.tex  template.tex
src/: hyphen.d.ts  main.tsx  pkg-index.ts  wawoff2.d.ts
src/cards/: CSSJustifyCard.tsx  CSSPrettyCard.tsx  Card.tsx  JustifiedLines.tsx  KPHarfrustCard.tsx  index.ts
src/core/: constants.ts  hyphenation.ts  index.ts  types.ts  wasm-node.ts  wasm.ts
src/demo/: App.tsx  FontPicker.tsx  fonts.ts  presets.ts  samples.ts  ui.tsx
src/hooks/: useContainerWidth.ts  useFontHzLabels.ts  usePersistPrefs.ts
src/lib/: constants.ts  decode-woff2.ts  measure.ts  resolve-font-binary.ts  tokenise.ts  types.ts
src/react/: KnuthPlassWrap.tsx  index.ts  useKnuthPlassWrap.ts
tests/e2e/: controls.spec.ts  edge-cases.spec.ts  hyphenation.spec.ts  overflow.spec.ts  presets.spec.ts  smoke.spec.ts
wasm/: Cargo.toml  build.rs
wasm/src/: lib.rs
