[package]
name = "kp-break-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console-panic"]
console-panic = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
harfrust = { package = "harfrust-lite", path = "../crates/harfrust-lite", default-features = false, features = ["std"] }
read-fonts = "0.39"
icu_segmenter = "2.2"
hypher-dynamic = { path = "../crates/hypher-dynamic" }
console_error_panic_hook = { version = "0.1", optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-mutable-globals", "--strip-producers"]

[profile.release]
opt-level = "z"
lto = "fat"
strip = true
